--- a/application/views/scripts/panel/footer.phtml
+++ b/application/views/scripts/panel/footer.phtml
@@ -1,6 +1,6 @@
 <div id="footerLinks">
-    <a href="mailto:<?php echo Fisma::configuration()->getConfig('contact_email');?>?Subject=<?php echo 
-    urlencode(Fisma::configuration()->getConfig('contact_subject'));?>">Contact Administrator</a>&nbsp;|&nbsp;
+    <a href="mailto:<?php echo $this->email; ?>?Subject=<?php $this->subject; ?>">Contact Administrator</a>
+    &nbsp;|&nbsp;
     <a href="/auth/rob/">Rules of Behavior</a>&nbsp;|&nbsp;
     <a href="/auth/privacy/">Privacy Policy</a>&nbsp;|&nbsp;
     <i>Powered by <a href="http://www.openfisma.org" target='_blank'>OpenFISMA</a></i>
