--- a/application/views/scripts/panel/header.phtml
+++ b/application/views/scripts/panel/header.phtml
@@ -14,7 +14,7 @@
     ?>
     <p>
         <b>
-            <?php echo User::currentUser()->nameFirst . ' ' . User::currentUser()->nameLast; ?>
+            <?php echo $this->fullName; ?>
         </b>
         is currently logged in
     </p>
@@ -23,7 +23,7 @@
 <div id="menubar"><!-- YUI renders the menubar into this div --></div>
 <script type="text/javascript">
 //Constructs the YUI menu bar for OpenFISMA
-var jsonMenuData = '<?php echo Zend_Json_Encoder::encode($this->mainMenuBar->getMenus()); ?>';
+var jsonMenuData = '<?php echo html_entity_decode($this->jsonMenuData); ?>';
 var menuData = YAHOO.lang.JSON.parse(jsonMenuData);
 var menuBar = new YAHOO.widget.MenuBar("mainmenu", {autosubmenudisplay: true});
 YAHOO.util.Dom.addClass(menuBar.element, "yuimenubarnav");
