--- a/application/views/scripts/remediation/security-control.phtml
+++ b/application/views/scripts/remediation/security-control.phtml
@@ -1,6 +1,6 @@
 <?php 
     Fisma_Format_Section::startSection('NIST 800-53 Control Mapping');
-    $organization = $this->finding->ResponsibleOrganization->nickname;
+    $organization = $this->finding['ResponsibleOrganization']['nickname'];
 ?>
 <table class="keyValues">
     <tr>
@@ -16,14 +16,14 @@
                   href="/metainfo/list/o/security_control/format/html/"
                     <?php
                     if ($this->updateControlAssignmentFindingObjPrivilege
-                        && ('NEW' == $this->finding->status || 'DRAFT' == $this->finding->status)) {
+                        && ('NEW' == $this->finding['status'] || 'DRAFT' == $this->finding['status'])) {
                         echo "class='editable' target='security_control'";
                     }
                     ?>>
 
                 <?php
-                if (!empty($this->finding->securityControlId)) {
-                    echo "{$this->finding->SecurityControl->code}";
+                if (!empty($this->finding['securityControlId'])) {
+                    echo "{$this->finding['SecurityControl']['code']}";
                 } else {
                     // nbsp is a hack to make the pencil appear in the right place
                     echo 'NONE&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
@@ -33,26 +33,26 @@
         </td>
     </tr>
     <?php 
-    if (!empty($this->finding->securityControlId)) {
-        $securityControl = $this->finding->SecurityControl; 
+    if (!empty($this->finding['securityControlId'])) {
+        $securityControl = $this->finding['SecurityControl']; 
     ?>
         <tr>
             <td>Class:</td>
-            <td><?php echo $securityControl->class;?></td>
+            <td><?php echo $securityControl['class'];?></td>
         </tr>
         <tr>
             <td>Family:</td>
-            <td><?php echo $securityControl->family;?></td>
+            <td><?php echo $securityControl['family'];?></td>
         </tr>
         <tr>
             <td>Subclass:</td>
-            <td><?php echo $securityControl->subclass;?></td>
+            <td><?php echo $securityControl['subclass'];?></td>
         </tr>
         <tr>
             <td>Low Impact System:</td>
             <td>
                 <?php 
-                echo 'LOW' == $securityControl->controlLevel ? 'Control Required' : 'Control Not Required'; 
+                echo 'LOW' == $securityControl['controlLevel'] ? 'Control Required' : 'Control Not Required'; 
                 ?>
             </td>
         </tr>
@@ -60,8 +60,8 @@
             <td>Moderate Impact System:</td>
             <td>
                 <?php
-                echo 'LOW'      == $securityControl->controlLevel || 
-                     'MODERATE' == $securityControl->controlLevel ? 
+                echo 'LOW'      == $securityControl['controlLevel'] || 
+                     'MODERATE' == $securityControl['controlLevel'] ? 
                      'Control Required' : 
                      'Control Not Required';
                 ?>
@@ -71,9 +71,9 @@
             <td>High Impact System:</td>
             <td>
                 <?php
-                echo 'LOW'      == $securityControl->controlLevel || 
-                     'MODERATE' == $securityControl->controlLevel || 
-                     'HIGH'     == $securityControl->controlLevel ? 
+                echo 'LOW'      == $securityControl['controlLevel'] || 
+                     'MODERATE' == $securityControl['controlLevel'] || 
+                     'HIGH'     == $securityControl['controlLevel'] ? 
                      'Control Required' : 
                      'Control Not Required';
                 ?>
@@ -81,21 +81,21 @@
         </tr>
         <tr>
             <td>Control:</td>
-            <td><?php echo $securityControl->control;?></td>
+            <td><?php echo $securityControl['control'];?></td>
         </tr>
         <tr>
             <td>Guidance:</td>
-            <td><?php echo $securityControl->guidance;?></td></tr>
+            <td><?php echo $securityControl['guidance'];?></td></tr>
         <tr>
             <td>Enhancements:</td>
             <td>
-                <?php echo str_replace("\\n", "<br>", $securityControl->enhancements); ?>
+                <?php echo str_replace("\\n", "<br>", $securityControl['enhancements']); ?>
             </td>
         </tr>
         <tr>
             <td>Supplement:</td>
             <td>
-                <?php echo $securityControl->supplement; ?>
+                <?php echo $securityControl['supplement']; ?>
             </td>
         </tr>
     <?php 
