--- a/application/views/scripts/incident/workflow-steps.phtml
+++ b/application/views/scripts/incident/workflow-steps.phtml
@@ -1,7 +1,7 @@
 <?php 
 Fisma_Format_Section::startSection("Workflow Steps"); 
 
-if ('closed' == $this->incident->status):
+if ('closed' == $this->incident['status']):
 ?>
     <p>
         <b>
@@ -12,7 +12,7 @@ if ('closed' == $this->incident->status):
 endif;
 
 foreach ($this->steps as $step):
-    switch ($step->status):
+    switch ($step['status']):
         case 'current':
             $class = 'currentIncidentStep';
             break;
@@ -28,30 +28,30 @@ foreach ($this->steps as $step):
         <input type="hidden" name="stepId" value="<?php ; ?>">
         <div class="incidentStep <?php echo $class; ?>">
             <div class="incidentCardinality">
-                <?php echo ($step->cardinality + 1); ?>
+                <?php echo ($step['cardinality'] + 1); ?>
             </div>
             <table>
                 <tr>
                     <td>Step:</td>
-                    <td><?php echo $step->name; ?></td>
+                    <td><?php echo $step['name']; ?></td>
                 </tr>
                 <tr>
                     <td>Status:</td>
-                    <td><?php echo ucfirst($step->status); ?></td>
+                    <td><?php echo ucfirst($step['status']); ?></td>
                 </tr>
                 <?php
-                if (!is_null($step->userId)):
+                if (!is_null($step['userId'])):
                 ?>
                     <tr>
                         <td>Completion Date:</td>
                         <td>
-                            <?php echo empty($step->completeTs) ? 'n/a' : $step->completeTs; ?>
+                            <?php echo empty($step['completeTs']) ? 'n/a' : $step['completeTs']; ?>
                         </td>
                     </tr>
                 <?php
                 endif;
 
-                if (!is_null($step->userId)):
+                if (!is_null($step['userId'])):
                 ?>
                     <tr>
                         <td>Completed By:</td>
@@ -69,25 +69,25 @@ foreach ($this->steps as $step):
                 <?php
                 endif;
 
-                if (!empty($step->description)):
+                if (!empty($step['description'])):
                 ?>
                     <tr>
                         <td>Description:</td>
-                        <td><?php echo $step->description; ?></td>
+                        <td><?php echo $step['description']; ?></td>
                     </tr>
                 <?php
                 endif;
 
-                if (!empty($step->comments)):
+                if (!empty($step['comments'])):
                 ?>
                     <tr>
                         <td>Comments:</td>
-                        <td><?php echo Fisma_String::textToHtml($step->comments); ?></td>
+                        <td><?php echo Fisma_String::textToHtml($step['comments']); ?></td>
                     </tr>
                 <?php
                 endif;
 
-                if ('current' == $step->status && $this->updateIncidentObjPrivilege):
+                if ('current' == $step['status'] && $this->updateIncidentObjPrivilege):
                 ?>
                     <tr>
                         <td>*Comments:</td>
