--- a/application/views/scripts/incident/incident.phtml
+++ b/application/views/scripts/incident/incident.phtml
@@ -21,11 +21,12 @@
         ?>
         <table class="keyValues">
             <?php 
-            if (isset($this->incident->ClonedFromIncident)):
+            if (!empty($incident['ClonedFromIncident'])):
             ?>
             <tr>
                 <td>Cloned From Incident:</td>
-                <td><a href="/panel/incident/view/id/<?php echo $id; ?>"><?php echo $id; ?></a></td>
+                <td><a href="/panel/incident/view/id/<?php echo $incident['ClonedFromIncident'][0]['id']; ?>">
+                <?php echo $incident['ClonedFromIncident'][0]['id']; ?></a></td>
             </tr>
             <?php
             endif;
@@ -72,8 +73,8 @@
                 <td>Category:</td>
                 <td>
                     <?php 
-                    if (!empty($this->incident->Category->name)):
-                        echo $this->incident->Category->name;
+                    if (!empty($incident['Category']['name'])):
+                        echo $incident['Category']['name'];
                     else:
                         echo '<i>No Category Assigned</i>';
                     endif;
@@ -218,14 +219,14 @@
         ?>
         <table class="keyValues">
             <?php
-            if (isset($this->incident->ReportingUser)):
+            if (!is_null($incident['reportingUserId'])):
             ?>
                 <tr>
                     <th colspan="2">Reported By Registered User</th>
                 </tr>
                 <tr>
                     <td>User:</td>
-                    <td><?php echo $this->incident->ReportingUser; ?></td>
+                    <td><?php echo $this->reportingUser; ?></td>
                 </tr>
             <?php
             else:
