--- a/application/views/scripts/incident/workflow-steps.phtml
+++ b/application/views/scripts/incident/workflow-steps.phtml
@@ -12,7 +12,7 @@ if ('closed' == $this->incident['status']):
 endif;
 
 foreach ($this->steps as $step):
-    switch ($step['status']):
+    switch ($step['iw_status']):
         case 'current':
             $class = 'currentIncidentStep';
             break;
@@ -28,66 +28,72 @@ foreach ($this->steps as $step):
         <input type="hidden" name="stepId" value="<?php ; ?>">
         <div class="incidentStep <?php echo $class; ?>">
             <div class="incidentCardinality">
-                <?php echo ($step['cardinality'] + 1); ?>
+                <?php echo ($step['iw_cardinality'] + 1); ?>
             </div>
             <table>
                 <tr>
                     <td>Step:</td>
-                    <td><?php echo $step['name']; ?></td>
+                    <td><?php echo $step['iw_name']; ?></td>
                 </tr>
                 <tr>
                     <td>Status:</td>
-                    <td><?php echo ucfirst($step['status']); ?></td>
+                    <td><?php echo ucfirst($step['iw_status']); ?></td>
                 </tr>
                 <?php
-                if (!is_null($step['userId'])):
+                if (!is_null($step['iw_userId'])):
                 ?>
                     <tr>
                         <td>Completion Date:</td>
                         <td>
-                            <?php echo empty($step['completeTs']) ? 'n/a' : $step['completeTs']; ?>
+                            <?php echo empty($step['iw_completeTs']) ? 'n/a' : $step['iw_completeTs']; ?>
                         </td>
                     </tr>
                 <?php
                 endif;
 
-                if (!is_null($step['userId'])):
+                if (!is_null($step['iw_userId'])):
                 ?>
                     <tr>
                         <td>Completed By:</td>
-                        <td><?php echo $step->User; ?></td>
+                        <td><?php 
+                            if ($this->readUserObjPrivilege) {
+                                echo "<a href='/panel/user/sub/view/id/{$step['iw_userId']}'>" 
+                                   . "{$step['u_nameFirst']} {$step['u_nameLast']} ({$step['u_username']})</a>";
+                            }
+                            ?>
+                        </td>
                     </tr>
                 <?php
                 endif;
 
-                if (isset($step->Role)):
+                if (!is_null($step['iw_roleId'])):
                 ?>
                     <tr>
                         <td>Role Required:</td>
-                        <td><?php echo "({$step->Role->nickname}) {$step->Role->name}"; ?></td>
+                        <td><?php echo "({$step['r_nickname']}) {$step['r_name']}"; ?></td>
                     </tr>
                 <?php
                 endif;
 
-                if (!empty($step['description'])):
+                if (!empty($step['iw_description'])):
                 ?>
                     <tr>
                         <td>Description:</td>
-                        <td><?php echo $step['description']; ?></td>
+                        <td><?php echo $step['iw_description']; ?></td>
                     </tr>
                 <?php
                 endif;
 
-                if (!empty($step['comments'])):
+                if (!empty($step['iw_comments'])):
                 ?>
                     <tr>
                         <td>Comments:</td>
-                        <td><?php echo Fisma_String::textToHtml($step['comments']); ?></td>
+                        <td><?php echo Fisma_String::textToHtml($step['iw_comments']); ?></td>
                     </tr>
                 <?php
                 endif;
 
-                if ('current' == $step['status'] && $this->updateIncidentObjPrivilege):
+                if ('current' == $step['iw_status'] && $this->updateIncidentObjPrivilege):
                 ?>
                     <tr>
                         <td>*Comments:</td>
