--- a/application/views/scripts/dashboard/index.phtml
+++ b/application/views/scripts/dashboard/index.phtml
@@ -35,7 +35,7 @@
         <ul>
             <li>Last Logged in at <b><?php echo $this->lastLoginTs; ?></b></li>
             <li>From IP address <b><?php echo $this->lastLoginIp; ?></b></li>
-            <?php if ('database' == Fisma::configuration()->getConfig('auth_type')): ?>
+            <?php if ('database' == $this->authType): ?>
                 <li>
                     There were 
                     <b><?php echo $this->failureCount; ?></b>
@@ -47,7 +47,7 @@
     } else { 
     ?>
         <p>
-            This is the first time you have logged into <?php echo Fisma::configuration()->getConfig('system_name') ?>. 
+            This is the first time you have logged into <?php echo $this->systemName;?>. 
             We will begin tracking your login attempts moving forward.
         </p>
     <?php 
